// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogContent renders with default values 1`] = `
<Paragraph
  key="0"
>
  Hello world!
</Paragraph>
`;

exports[`render methods for Blog Content renders AssetHyperlink 1`] = `
<span>
  <a
    href="example.com"
  />
</span>
`;

exports[`render methods for Blog Content renders UrlHyperlink 1`] = `
<span>
  <a
    href="example.com"
  />
</span>
`;

exports[`render methods for Blog Content renders a gallery component if the id is gallery 1`] = `
<styles__GalleryContainer>
  <Slider
    arrows={true}
    beforeChange={[Function]}
    centerMode={true}
    centerPadding="15%"
    className="gallery-slick"
    infinite={true}
    responsive={
      Array [
        Object {
          "breakpoint": NaN,
          "settings": Object {
            "arrows": false,
            "centerMode": true,
            "centerPadding": "100px",
            "slidesToScroll": 1,
            "slidesToShow": 1,
          },
        },
        Object {
          "breakpoint": 550,
          "settings": Object {
            "arrows": false,
            "centerMode": true,
            "centerPadding": "40px",
            "slidesToScroll": 1,
            "slidesToShow": 1,
          },
        },
      ]
    }
    slidesToScroll={1}
    slidesToShow={1}
    speed={450}
  >
    <GalleryImage
      description={null}
      key="Test Image 3-photo"
      name="Test Image 3"
      original="//images.ctfassets.net/n2o4hgsv6wcx/443UGjr1WmsCsdSE64rbzE/95b2562f742096f5be79e6cbdb5062f2/static1.squarespace.com.jpg?w=1920&h=1080&fit=fill"
      originalAlt="test-image-3"
      photoIndex={1}
      photographer={
        Object {
          "name": "Test Photographer",
          "url": "https://www.example.com",
        }
      }
      thumbnail="//images.ctfassets.net/n2o4hgsv6wcx/443UGjr1WmsCsdSE64rbzE/95b2562f742096f5be79e6cbdb5062f2/static1.squarespace.com.jpg?w=200&h=120&fit=fill"
      thumbnailAlt="test-image-3"
      totalPhotos={1}
    />
  </Slider>
  <Slider
    arrows={false}
    centerMode={true}
    centerPadding="15%"
    className="gallery-slick"
    draggable={false}
    infinite={true}
    responsive={
      Array [
        Object {
          "breakpoint": NaN,
          "settings": Object {
            "arrows": false,
            "centerMode": true,
            "centerPadding": "100px",
            "slidesToScroll": 1,
            "slidesToShow": 1,
          },
        },
        Object {
          "breakpoint": 550,
          "settings": Object {
            "arrows": false,
            "centerMode": true,
            "centerPadding": "40px",
            "slidesToScroll": 1,
            "slidesToShow": 1,
          },
        },
      ]
    }
    slidesToScroll={1}
    slidesToShow={1}
    speed={450}
  >
    <GalleryImageDetails
      description={null}
      key="Test Image 3-description"
      name="Test Image 3"
      original="//images.ctfassets.net/n2o4hgsv6wcx/443UGjr1WmsCsdSE64rbzE/95b2562f742096f5be79e6cbdb5062f2/static1.squarespace.com.jpg?w=1920&h=1080&fit=fill"
      originalAlt="test-image-3"
      photographer={
        Object {
          "name": "Test Photographer",
          "url": "https://www.example.com",
        }
      }
      thumbnail="//images.ctfassets.net/n2o4hgsv6wcx/443UGjr1WmsCsdSE64rbzE/95b2562f742096f5be79e6cbdb5062f2/static1.squarespace.com.jpg?w=200&h=120&fit=fill"
      thumbnailAlt="test-image-3"
    />
  </Slider>
</styles__GalleryContainer>
`;

exports[`render methods for Blog Content renders gallery 1`] = `
<span>
  <Gallery
    images={
      Array [
        Object {
          "description": null,
          "name": "Test Image 3",
          "original": "//images.ctfassets.net/n2o4hgsv6wcx/443UGjr1WmsCsdSE64rbzE/95b2562f742096f5be79e6cbdb5062f2/static1.squarespace.com.jpg?w=1920&h=1080&fit=fill",
          "originalAlt": "test-image-3",
          "photographer": Object {
            "name": "Test Photographer",
            "url": "https://www.example.com",
          },
          "thumbnail": "//images.ctfassets.net/n2o4hgsv6wcx/443UGjr1WmsCsdSE64rbzE/95b2562f742096f5be79e6cbdb5062f2/static1.squarespace.com.jpg?w=200&h=120&fit=fill",
          "thumbnailAlt": "test-image-3",
        },
      ]
    }
  />
</span>
`;

exports[`render methods for Blog Content renders hr 1`] = `
<span>
  <Hr />
</span>
`;

exports[`render methods for Blog Content renders image 1`] = `
<span>
  <Image
    file={
      Object {
        "en-GB": Object {
          "url": "example.com",
        },
      }
    }
  />
</span>
`;

exports[`render methods for Blog Content renders quote 1`] = `
<span>
  <Quote />
</span>
`;

exports[`render methods for Blog Content returns null if id not recognized 1`] = `<span />`;
